[gd_scene load_steps=29 format=3 uid="uid://b73i1p5cw3b53"]

[ext_resource type="Script" path="res://Scenes and Scripts/Game/Laboratory/laboratory.gd" id="1_vx07n"]
[ext_resource type="Texture2D" uid="uid://c0xvgs33d27oo" path="res://Assets/Art/Environment/Rooms/Laboratory/Room/rendering_labor.PNG" id="2_ikmwy"]
[ext_resource type="AudioStream" uid="uid://c8hfjs6trma73" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var1.mp3" id="4_ial47"]
[ext_resource type="Texture2D" uid="uid://bofvsfejo11vd" path="res://Assets/Art/UI/Dialogue/speech_bubble_left.png" id="4_o7f4r"]
[ext_resource type="Texture2D" uid="uid://dsrxoltpg6iom" path="res://Assets/Art/Characters/Chemical Chameleon/Fullbody/chameleon_001.png" id="4_y87p1"]
[ext_resource type="AudioStream" uid="uid://2rj1ayk1kdtp" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var2.mp3" id="5_bonay"]
[ext_resource type="Texture2D" uid="uid://djxubsy22fhwe" path="res://Assets/Art/Characters/Chemical Chameleon/Fullbody/chameleon_002.png" id="5_xvx8k"]
[ext_resource type="AudioStream" uid="uid://bag4e5o0pn42r" path="res://Assets/Sound/SFX/UI/Click/sfx_hub_ui_click_var3.mp3" id="6_ngvmm"]
[ext_resource type="Texture2D" uid="uid://clx51sk6di2et" path="res://Assets/Art/Characters/Chemical Chameleon/Fullbody/chameleon_003.png" id="6_wovyu"]
[ext_resource type="Texture2D" uid="uid://8e227vieqtam" path="res://Assets/Art/Characters/Chemical Chameleon/Fullbody/chameleon_004.png" id="7_h0hsi"]
[ext_resource type="Texture2D" uid="uid://dpm70w5m3uweb" path="res://Assets/Art/Characters/Chemical Chameleon/Headshot/Chameleon Headshot.png" id="7_i3486"]
[ext_resource type="AudioStream" uid="uid://c0au4soqh3llb" path="res://Assets/Sound/SFX/UI/Hover/sfx_hub_ui_hover_var1.mp3" id="7_vxdtw"]
[ext_resource type="Texture2D" uid="uid://c727g3a4ej504" path="res://Assets/Art/UI/Buttons/Button.png" id="8_4sfuo"]
[ext_resource type="Texture2D" uid="uid://cjgcjmvn07n8m" path="res://Assets/Art/Characters/Chemical Chameleon/Fullbody/chameleon_005.png" id="8_cekpt"]
[ext_resource type="AudioStream" uid="uid://ccy6mhwriygjc" path="res://Assets/Sound/SFX/UI/Hover/sfx_hub_ui_hover_var3.mp3" id="8_h08au"]
[ext_resource type="Texture2D" uid="uid://b76ies1ylcj0t" path="res://Assets/Art/Characters/Chemical Chameleon/Fullbody/chameleon_006.png" id="9_cqjc2"]
[ext_resource type="Texture2D" uid="uid://bhl7flv0cjgac" path="res://Assets/Art/Environment/Rooms/Laboratory/Objects/laboratory_table1.PNG" id="9_tgjy5"]
[ext_resource type="Texture2D" uid="uid://bi5d8ulhes045" path="res://Assets/Art/Characters/Chemical Chameleon/Fullbody/chameleon_007.png" id="10_txsdk"]
[ext_resource type="Texture2D" uid="uid://mbsqejlr2wu8" path="res://Assets/Art/UI/Dialogue/speech_bubble_right.png" id="11_ke86d"]
[ext_resource type="FontFile" uid="uid://dchkjqker6h15" path="res://Assets/Font/Margarine-Regular.ttf" id="16_ln43l"]
[ext_resource type="Texture2D" uid="uid://xumymdy4lywy" path="res://Assets/Art/Characters/Cari/Dialog Icon/cari_dialog.png" id="18_7811u"]
[ext_resource type="PackedScene" uid="uid://c7d1nwvtnotji" path="res://Scenes and Scripts/Help Button/help_button.tscn" id="18_ahv68"]
[ext_resource type="Texture2D" uid="uid://co55uwsttxpdl" path="res://Assets/Art/Characters/Carl/Dialog Icon/carl_dialog.png" id="19_atufw"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2sjpx"]
streams_count = 3
stream_0/stream = ExtResource("4_ial47")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_bonay")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_ngvmm")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xqlic"]
streams_count = 2
stream_0/stream = ExtResource("7_vxdtw")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_h08au")
stream_1/weight = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_e8enl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_y87p1")
}, {
"duration": 1.0,
"texture": ExtResource("5_xvx8k")
}, {
"duration": 1.0,
"texture": ExtResource("6_wovyu")
}, {
"duration": 1.0,
"texture": ExtResource("7_h0hsi")
}, {
"duration": 1.0,
"texture": ExtResource("8_cekpt")
}, {
"duration": 1.0,
"texture": ExtResource("9_cqjc2")
}, {
"duration": 1.0,
"texture": ExtResource("10_txsdk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_t1na7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ke86d")
}, {
"duration": 1.0,
"texture": ExtResource("4_o7f4r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3yb1s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_7811u")
}, {
"duration": 1.0,
"texture": ExtResource("19_atufw")
}, {
"duration": 1.0,
"texture": ExtResource("7_i3486")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Laboratory" type="Node2D"]
script = ExtResource("1_vx07n")

[node name="Laborraum" type="TextureRect" parent="."]
offset_left = 4.0
offset_top = 2.0
offset_right = 1924.0
offset_bottom = 1082.0
texture = ExtResource("2_ikmwy")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1410, 687)
texture = ExtResource("9_tgjy5")

[node name="LaborArea2D" type="Area2D" parent="Sprite2D"]
position = Vector2(-1406, -685)
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/LaborArea2D"]
polygon = PackedVector2Array(901, 781, 888, 546, 1211, 472, 1777, 610, 1774, 705, 1925, 750, 1923, 885, 1618, 970)

[node name="Click" type="AudioStreamPlayer" parent="Sprite2D"]
stream = SubResource("AudioStreamRandomizer_2sjpx")
volume_db = -18.0

[node name="Hover" type="AudioStreamPlayer" parent="Sprite2D"]
stream = SubResource("AudioStreamRandomizer_xqlic")
volume_db = -15.0

[node name="Chameleon" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1065, 578)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_e8enl")
frame = 6
frame_progress = 0.960774

[node name="Dialoguebox" type="AnimatedSprite2D" parent="."]
position = Vector2(1408, 788)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_t1na7")
metadata/_edit_use_anchors_ = true

[node name="FaceSprite" type="AnimatedSprite2D" parent="Dialoguebox"]
position = Vector2(208.667, -6)
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_3yb1s")
frame_progress = 0.761408

[node name="Name" type="RichTextLabel" parent="Dialoguebox"]
offset_left = -289.0
offset_top = -79.0
offset_right = 116.0
offset_bottom = -32.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("16_ln43l")
text = "Carl
"
scroll_active = false

[node name="Text" type="RichTextLabel" parent="Dialoguebox"]
offset_left = -279.0
offset_top = -40.0
offset_right = 99.0
offset_bottom = 61.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("16_ln43l")
text = "Haloo was läuft was läuft"
scroll_active = false

[node name="TextureButton" type="TextureButton" parent="Dialoguebox"]
offset_left = -497.333
offset_top = -103.333
offset_right = 613.667
offset_bottom = 1048.67
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("8_4sfuo")
stretch_mode = 0

[node name="Control" parent="." instance=ExtResource("18_ahv68")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="mouse_entered" from="Sprite2D/LaborArea2D" to="." method="_on_labor_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/LaborArea2D" to="." method="_on_labor_area_2d_mouse_exited"]
[connection signal="button_down" from="Dialoguebox/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="HelpClosed" from="Control" to="." method="_on_control_help_closed"]
[connection signal="HelpOpened" from="Control" to="." method="_on_control_help_opened"]
